功能增强 1、增加config模式,方便对象属性注入 2、优化代码、控制缓存并发、增加流式操作 3、增加权限框架、低流量消虚 4、预留跟三方ioc框架整合接口，如springboot springcloud整合框架